FullCycle-k8s/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "goserver"
  labels:
    app: "goserver"
spec:
  selector:
    matchLabels:
      app: "goserver"
  replicas: 2
  template:
    metadata:
      labels:
        app: "goserver"
    spec:
      containers:
       - name: "goserver"
         image: "mgsantos89/hello-go:latest"
         startupProbe:
           httpGet: 
            path: /healthz
            port: 8000
           periodSeconds: 3
           failureThreshold: 30
         readinessProbe:
           httpGet: 
            path: /healthz
            port: 8000
           periodSeconds: 3
           failureThreshold: 3
           initialDelaySeconds: 10
         livenessProbe:
           httpGet: 
            path: /healthz
            port: 8000
           periodSeconds: 5
           failureThreshold: 5
           timeoutSeconds: 1
           successThreshold: 1
         ########################################
         #Add Env hardcoded Direto no Deployment#
         ########################################
         #env:
         # - name: NAME
         #   value: "Marco Gomes"
         # - name: AGE 
         #   value: "35"
         ################################
         #Add Env. Coletada do Configmap#
         ################################
         #Uma a Uma
         #env: 
         # - name: NAME
         #   valueFrom:
         #     configMapKeyRef:
         #       name: goserver-env
         #       key: NAME
         # - name: AGE
         #   valueFrom:
         #     configMapKeyRef:
         #       name: goserver-env
         #       key: AGE
         ########################################################
         #Add EndFrom e carregar todas as variaveis do Configmap#
         ########################################################
         volumeMounts:
           - mountPath:  "/go/myfamily"
             name:  config
      #Declarando volume com dados do confimap
      volumes:
        - name: config
          configMap: 
            name: configmap-family
            items: 
            - key: members
              path: "family.txt"
