FullCycle-k8s/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name:  "goserver-svc"
spec:
  selector:
    app:  "goserver"
  type: ClusterIP
  ports:
  - name:  "goserver-http"
    port:  8000
