FullCycle-k8s/k8s/svc.LoadBalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name:  "goserver-svc"
spec:
  selector:
    app:  "goserver"
  type: LoadBalancer
  ports:
  - name:  "goserver-http"
    port: 8000
    targetPort: 8000 # TARGETPORT se refere a ponta de escuta do container no pod, caso não seja informado sera redirecionado para um numero de porta igual ao do servico
    protocol: TCP
    NodePort: 30001
