FullCycle-k8s/k8s/svc.nodeport.yaml
#NodePort Associar porta alta ao host
#Maior que maior 30000 menor <32767 
apiVersion: v1
kind: Service
metadata:
  name:  "goserver-svc"
spec:
  selector:
    app:  "goserver"
  type: NodePort
  ports:
  - name:  "goserver-http"
    port: 8000
    targetPort: 8000 # TARGETPORT se refere a ponta de escuta do container no pod, caso não seja informado sera redirecionado para um numero de porta igual ao do servico
    protocol: TCP
    NodePort: 30001
#Ou seja, Quando alguem acessar a porta 30001 do meu host
#será redirecionado a porta 80 do meu service
#que vai direcionar a porta 8000 do meu pod
